Weight Paint Tools Blur, Average and Smear show wrong Weight parameter #60512

Closed
opened 2019-01-14 22:06:21 +01:00 by William Reynish · 5 comments

System Information
Operating system: 10.14.2 (18C54)
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: Blender 2.80 beta

Short description of error
Weight Paint Tools Blur, Average and Smear all display the Weight paint parameter even though it doesn't apply

Exact steps for others to reproduce the error

  • Go to Weight Paint Mode
  • Switch to Blur, Average and Smear tool

In the top bar, you will see the Weight tool property, even though it doesn't apply here,

Screenshot 2019-01-14 at 22.02.44.png

Screenshot 2019-01-14 at 22.02.52.png

Screenshot 2019-01-14 at 22.01.08.png

**System Information** Operating system: 10.14.2 (18C54) Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: Blender 2.80 beta **Short description of error** Weight Paint Tools Blur, Average and Smear all display the Weight paint parameter even though it doesn't apply **Exact steps for others to reproduce the error** - Go to Weight Paint Mode - Switch to Blur, Average and Smear tool # In the top bar, you will see the Weight tool property, even though it doesn't apply here, ![Screenshot 2019-01-14 at 22.02.44.png](https://archive.blender.org/developer/F6288664/Screenshot_2019-01-14_at_22.02.44.png) ![Screenshot 2019-01-14 at 22.02.52.png](https://archive.blender.org/developer/F6288665/Screenshot_2019-01-14_at_22.02.52.png) ![Screenshot 2019-01-14 at 22.01.08.png](https://archive.blender.org/developer/F6288666/Screenshot_2019-01-14_at_22.01.08.png)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2019-01-14 22:07:16 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Hi again @ideasman42 :) Seems like we are still showing some wrong tool properties here.

Hi again @ideasman42 :) Seems like we are still showing some wrong tool properties here.

This issue was referenced by 07541052a0

This issue was referenced by 07541052a03740f358127b890197517433eb6d8d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60512
No description provided.