Fix T60512: Weight paint brushes show weight when unused